// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App Snapshots > renders completed state correctly 1`] = `
<div
  class="sidebar mode-review"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot "
      />
      <span
        class="app-title"
      >
        AMI Assist
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        title="Session History"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        title="Settings"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <path
            d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="physician-bar"
  >
    <span
      class="physician-bar-name"
    >
      Dr. Test
    </span>
    <button
      class="physician-bar-switch"
    >
      Switch
    </button>
  </div>
  <div
    class="review-mode"
  >
    <div
      class="session-summary"
    >
      <span
        class="summary-check"
      >
        ✓
      </span>
      <span
        class="summary-label"
      >
        Complete
      </span>
      <span
        class="summary-duration"
      >
        0:30
      </span>
      <span
        class="summary-quality quality-unknown"
      >
        Unknown
      </span>
      <span
        class="summary-model"
        title="Transcription model"
      >
        large-v3-turbo
      </span>
    </div>
    <div
      class="review-tabs"
    >
      <button
        class="review-tab "
      >
        Transcript
      </button>
      <button
        class="review-tab active"
      >
        SOAP
      </button>
      <button
        class="review-tab "
      >
        Insights
      </button>
    </div>
    <div
      class="review-tab-content"
    >
      <div
        class="tab-panel soap-panel"
      >
        <div
          class="soap-options"
        >
          <div
            class="soap-option-row"
          >
            <label
              class="soap-option-label"
            >
              Detail: 
              Standard
            </label>
            <div
              class="soap-detail-slider"
            >
              <input
                aria-label="SOAP note detail level"
                class="detail-slider"
                max="10"
                min="1"
                type="range"
                value="5"
              />
              <span
                class="detail-value"
              >
                5
              </span>
            </div>
          </div>
          <div
            class="soap-option-row"
          >
            <label
              class="soap-option-label"
            >
              Format
            </label>
            <div
              class="soap-format-toggle"
            >
              <button
                class="format-btn active"
              >
                Problem
              </button>
              <button
                class="format-btn "
              >
                Comprehensive
              </button>
            </div>
          </div>
          <div
            class="soap-option-row custom-instructions"
          >
            <button
              class="custom-instructions-toggle"
            >
              <span
                class="chevron-small collapsed"
              >
                ▼
              </span>
              Session Instructions
            </button>
          </div>
        </div>
        <div
          class="soap-generate-actions"
        >
          <button
            class="btn-generate"
            disabled=""
          >
            LLM not connected
          </button>
          <button
            class="btn-generate btn-vision"
            disabled=""
            title="No screenshots captured"
          >
            Vision SOAP
          </button>
        </div>
      </div>
    </div>
    <div
      class="action-bar"
    >
      <button
        class="btn-primary"
      >
        New Session
      </button>
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders error state correctly 1`] = `
<div
  class="sidebar mode-ready"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot "
      />
      <span
        class="app-title"
      >
        AMI Assist
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        title="Session History"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        title="Settings"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <path
            d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="physician-bar"
  >
    <span
      class="physician-bar-name"
    >
      Dr. Test
    </span>
    <button
      class="physician-bar-switch"
    >
      Switch
    </button>
  </div>
  <div
    class="ready-mode"
  >
    <div
      class="automation-toggles"
    >
      <div
        class="auto-toggle-item"
      >
        <label
          class="toggle-label"
        >
          <input
            class="toggle-checkbox"
            type="checkbox"
          />
          <span
            class="toggle-switch"
          />
          <span
            class="toggle-text"
          >
            Auto-start
          </span>
        </label>
      </div>
      <div
        class="auto-toggle-item"
      >
        <label
          class="toggle-label"
        >
          <input
            checked=""
            class="toggle-checkbox"
            type="checkbox"
          />
          <span
            class="toggle-switch"
          />
          <span
            class="toggle-text"
          >
            Auto-end
          </span>
        </label>
      </div>
    </div>
    <div
      class="mic-preview"
    >
      <div
        class="mic-level-bar"
      >
        <div
          class="mic-level-fill"
          style="width: 0%;"
        />
      </div>
    </div>
    <button
      aria-label="Start new session"
      class="start-button-large ready "
    >
      <span
        class="start-label"
      >
        Start New Session
      </span>
    </button>
    <div
      class="ready-status"
    >
      <div
        class="permission-error-container"
      >
        <span
          class="status-error"
        >
          Microphone access denied
        </span>
      </div>
    </div>
    <div
      class="medplum-status-section"
    >
      <div
        class="medplum-logged-out"
      >
        <span
          class="medplum-status-text"
        >
          Log in to enable automatic sync to your EMR
        </span>
        <div
          class="medplum-login-actions"
        >
          <button
            aria-label="Log in to Medplum"
            class="medplum-login-btn"
          >
            Log In
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders idle state correctly 1`] = `
<div
  class="sidebar mode-ready"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot idle"
      />
      <span
        class="app-title"
      >
        AMI Assist
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        title="Session History"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        title="Settings"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <path
            d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="physician-bar"
  >
    <span
      class="physician-bar-name"
    >
      Dr. Test
    </span>
    <button
      class="physician-bar-switch"
    >
      Switch
    </button>
  </div>
  <div
    class="ready-mode"
  >
    <div
      class="automation-toggles"
    >
      <div
        class="auto-toggle-item"
      >
        <label
          class="toggle-label"
        >
          <input
            class="toggle-checkbox"
            type="checkbox"
          />
          <span
            class="toggle-switch"
          />
          <span
            class="toggle-text"
          >
            Auto-start
          </span>
        </label>
      </div>
      <div
        class="auto-toggle-item"
      >
        <label
          class="toggle-label"
        >
          <input
            checked=""
            class="toggle-checkbox"
            type="checkbox"
          />
          <span
            class="toggle-switch"
          />
          <span
            class="toggle-text"
          >
            Auto-end
          </span>
        </label>
      </div>
    </div>
    <div
      class="mic-preview"
    >
      <div
        class="mic-level-bar"
      >
        <div
          class="mic-level-fill"
          style="width: 0%;"
        />
      </div>
    </div>
    <button
      aria-label="Start new session"
      class="start-button-large ready "
    >
      <span
        class="start-label"
      >
        Start New Session
      </span>
    </button>
    <div
      class="medplum-status-section"
    >
      <div
        class="medplum-logged-out"
      >
        <span
          class="medplum-status-text"
        >
          Log in to enable automatic sync to your EMR
        </span>
        <div
          class="medplum-login-actions"
        >
          <button
            aria-label="Log in to Medplum"
            class="medplum-login-btn"
          >
            Log In
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders recording state correctly 1`] = `
<div
  class="sidebar mode-recording"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot recording"
      />
      <span
        class="app-title"
      >
        AMI Assist
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        disabled=""
        title="History disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        disabled=""
        title="Settings disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <path
            d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="physician-bar"
  >
    <span
      class="physician-bar-name"
    >
      Dr. Test
    </span>
    <button
      class="physician-bar-switch"
    >
      Switch
    </button>
  </div>
  <div
    class="recording-mode"
  >
    <div
      class="recording-auto-end-toggle"
    >
      <label
        class="toggle-label compact"
      >
        <input
          class="toggle-checkbox"
          type="checkbox"
        />
        <span
          class="toggle-switch"
        />
        <span
          class="toggle-text"
        >
          Auto-end
        </span>
      </label>
    </div>
    <div
      class="session-progress"
    >
      <div
        class="session-progress-indicator"
      >
        <span
          class="pulse-dot"
        />
        <span
          class="pulse-dot"
        />
        <span
          class="pulse-dot"
        />
      </div>
      <div
        class="session-progress-text"
      >
        Session in progress...
      </div>
    </div>
    <button
      aria-label="Audio quality - tap for details"
      class="quality-indicator good"
    >
      <span
        class="quality-dot"
      />
      <span
        class="quality-label"
      >
        Good audio
      </span>
    </button>
    <button
      aria-expanded="false"
      aria-label="Add notes"
      class="notes-toggle  "
    >
      <span
        class="notes-icon"
      >
        📝
      </span>
      <span
        class="notes-label"
      >
        Add Notes
      </span>
      <span
        class="notes-chevron"
      >
        ▼
      </span>
    </button>
    <button
      aria-label="End session"
      class="stop-button "
    >
      <span
        class="stop-icon"
      />
      <span
        class="stop-label"
      >
        End Session
      </span>
    </button>
    <button
      class="transcript-toggle "
    >
      Show Transcript
    </button>
    <div
      class="clinical-chat collapsed"
    >
      <button
        aria-expanded="false"
        aria-label="Expand clinical assistant"
        class="clinical-chat-header"
      >
        <span
          class="chat-header-icon"
        >
          💬
        </span>
        <span
          class="chat-header-title"
        >
          Clinical Assistant
        </span>
        <span
          class="chat-header-chevron"
        >
          ▲
        </span>
      </button>
    </div>
    <div
      class="model-indicator"
    >
      large-v3-turbo
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders stopping state correctly 1`] = `
<div
  class="sidebar mode-recording"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot stopping"
      />
      <span
        class="app-title"
      >
        AMI Assist
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        disabled=""
        title="History disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        disabled=""
        title="Settings disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <path
            d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="physician-bar"
  >
    <span
      class="physician-bar-name"
    >
      Dr. Test
    </span>
    <button
      class="physician-bar-switch"
    >
      Switch
    </button>
  </div>
  <div
    class="recording-mode"
  >
    <div
      class="recording-auto-end-toggle"
    >
      <label
        class="toggle-label compact"
      >
        <input
          class="toggle-checkbox"
          type="checkbox"
        />
        <span
          class="toggle-switch"
        />
        <span
          class="toggle-text"
        >
          Auto-end
        </span>
      </label>
    </div>
    <div
      class="session-progress"
    >
      <div
        class="session-progress-indicator"
      >
        <span
          class="pulse-dot"
        />
        <span
          class="pulse-dot"
        />
        <span
          class="pulse-dot"
        />
      </div>
      <div
        class="session-progress-text"
      >
        Session in progress...
      </div>
    </div>
    <button
      aria-label="Audio quality - tap for details"
      class="quality-indicator good"
    >
      <span
        class="quality-dot"
      />
      <span
        class="quality-label"
      >
        Good audio
      </span>
    </button>
    <button
      aria-expanded="false"
      aria-label="Add notes"
      class="notes-toggle  "
    >
      <span
        class="notes-icon"
      >
        📝
      </span>
      <span
        class="notes-label"
      >
        Add Notes
      </span>
      <span
        class="notes-chevron"
      >
        ▼
      </span>
    </button>
    <button
      aria-label="Ending session..."
      class="stop-button stopping"
      disabled=""
    >
      <span
        class="stop-icon"
      />
      <span
        class="stop-label"
      >
        Ending...
      </span>
    </button>
    <button
      class="transcript-toggle "
    >
      Show Transcript
    </button>
    <div
      class="clinical-chat collapsed"
    >
      <button
        aria-expanded="false"
        aria-label="Expand clinical assistant"
        class="clinical-chat-header"
      >
        <span
          class="chat-header-icon"
        >
          💬
        </span>
        <span
          class="chat-header-title"
        >
          Clinical Assistant
        </span>
        <span
          class="chat-header-chevron"
        >
          ▲
        </span>
      </button>
    </div>
    <div
      class="model-indicator"
    >
      large-v3-turbo
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders with transcript correctly 1`] = `
<div
  class="sidebar mode-recording"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot recording"
      />
      <span
        class="app-title"
      >
        AMI Assist
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        disabled=""
        title="History disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        disabled=""
        title="Settings disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <path
            d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="physician-bar"
  >
    <span
      class="physician-bar-name"
    >
      Dr. Test
    </span>
    <button
      class="physician-bar-switch"
    >
      Switch
    </button>
  </div>
  <div
    class="recording-mode"
  >
    <div
      class="recording-auto-end-toggle"
    >
      <label
        class="toggle-label compact"
      >
        <input
          class="toggle-checkbox"
          type="checkbox"
        />
        <span
          class="toggle-switch"
        />
        <span
          class="toggle-text"
        >
          Auto-end
        </span>
      </label>
    </div>
    <div
      class="session-progress"
    >
      <div
        class="session-progress-indicator"
      >
        <span
          class="pulse-dot"
        />
        <span
          class="pulse-dot"
        />
        <span
          class="pulse-dot"
        />
      </div>
      <div
        class="session-progress-text"
      >
        Session in progress...
      </div>
    </div>
    <button
      aria-label="Audio quality - tap for details"
      class="quality-indicator good"
    >
      <span
        class="quality-dot"
      />
      <span
        class="quality-label"
      >
        Good audio
      </span>
    </button>
    <button
      aria-expanded="false"
      aria-label="Add notes"
      class="notes-toggle  "
    >
      <span
        class="notes-icon"
      >
        📝
      </span>
      <span
        class="notes-label"
      >
        Add Notes
      </span>
      <span
        class="notes-chevron"
      >
        ▼
      </span>
    </button>
    <button
      aria-label="End session"
      class="stop-button "
    >
      <span
        class="stop-icon"
      />
      <span
        class="stop-label"
      >
        End Session
      </span>
    </button>
    <button
      class="transcript-toggle active"
    >
      Hide Transcript
    </button>
    <div
      class="transcript-preview"
    >
      <div
        class="transcript-preview-text"
      >
        Hello, this is a test transcription.

This is the second paragraph.
      </div>
      <div
        class="transcript-preview-draft"
      >
        Still speaking...
      </div>
    </div>
    <div
      class="clinical-chat collapsed"
    >
      <button
        aria-expanded="false"
        aria-label="Expand clinical assistant"
        class="clinical-chat-header"
      >
        <span
          class="chat-header-icon"
        >
          💬
        </span>
        <span
          class="chat-header-title"
        >
          Clinical Assistant
        </span>
        <span
          class="chat-header-chevron"
        >
          ▲
        </span>
      </button>
    </div>
    <div
      class="model-indicator"
    >
      large-v3-turbo
    </div>
  </div>
</div>
`;
